// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageGovernance disables proposal creation if not connected 1`] = `
<tmpage-stub
  class="governance"
  data-title="Governance"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmbtn-stub
    color="primary"
    disabled="true"
    id="propose-btn"
    value="Connecting..."
  />
   
  <modalpropose-stub
    denom="stake"
  />
   
  <router-view-stub />
</tmpage-stub>
`;

exports[`PageGovernance has the expected html structure 1`] = `
<tmpage-stub
  class="governance"
  data-title="Governance"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmbtn-stub
    color="primary"
    id="propose-btn"
    value="Create Proposal"
  />
   
  <modalpropose-stub
    denom="stake"
  />
   
  <router-view-stub />
</tmpage-stub>
`;
